# face-recog

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: bitbucket_sync.yaml  build.yaml  codeql.yaml  gitlab_sync.yaml  lint.yaml  publish.yml  release.yml  slack.yaml
facedetect/: __main__.py  cli.py  detector.py  models.py
src/facedetect/: cli.py  detector.py  models.py
