[project]
name = "facerecog"
version = "0.1.0"
description = "Simple Face Recognition CLI tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dlib>=19.24.6",
    "face-recognition>=1.3.0",
    "numpy>=2.1.2",
    "pillow>=10.4.0",
    "ruff>=0.6.9",
    "setuptools>=75.1.0",
]
